Defined Capability as a class rather than an enum